--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,7 @@ html {
   }
 
   .navbar > .logo {
-      position: relative; /* positioning will be explained in a resource */
+      position: relative;
       left: 2rem;
   }
   .container {
@@ -31,6 +31,7 @@ html {
   /* Medium and small screens (640px) */
  @media (min-width: 640px) {
    html { font-size: 112%; }
+
    .column {
          float: left;
          padding-left: 1rem;
