--- a/styles/main.css
+++ b/styles/main.css
@@ -54,6 +54,11 @@ html {
  .links-container .navbar-link:hover {
      color: rgb(233,50,117);
  }
+ .links-container .navbar-link:active {
+    color: rgb(233,50,117);
+    background-color: #FFFFFF;
+
+ }
   .container {
      margin: 0 auto;
      max-width: 64rem;
